--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-daisyui": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
